--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">Matches Simulator</string>
+    <string name="app_name">Match Simulator</string>
+    <string name="cd_simulator_button">Simulate match button</string>
+    <string name="cd_left_team_image">Team image to left</string>
+    <string name="cd_right_team_image">Team image to right</string>
 </resources>
